# Trainee_tasks

CPP_tasks/: LetterExtract.cpp  MyVector.h  MyVectorTest.cpp  WordsCount.cpp
CPP_tasks/DateClass/: Date.cpp  Date.h  DateClass.cpp  DateClass.h  DateClassTest.cpp
CPP_tasks/FibonacciIterator/: FibonacciIterator.cpp  FibonacciIterator.h  FibonacciIteratorTest.cpp
CPP_tasks/MyVectorDir/: MyVector.h  MyVectorTest.cpp  Vector.h
C_tasks/: ChangeNumBase.c  OddNumbers.c  Pascals_triangle.c  ReverseString.c  SequenceLen.c
KernelModulePatch/: 0001-Linux-kernel-module-patch.patch
Kernel_Modules/: Makefile  MessageModule.c  hello.c
Multithreading_tasks/: CMakeLists.txt  MemoryPool.cpp  MemoryPool.h  OccupiedInterval.cpp  OccupiedInterval.h  TestTarget.cpp
